<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/courses_icon"
            android:title="@string/courses" />


        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/address_icon"
            android:title="@string/address" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/about_icon"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_paymentmethod"
            android:icon="@drawable/payment_icon"
            android:title="@string/payment_method" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="Cart"/>

    </group>
</menu>