<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.address.AddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/rosebank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/rosebank_campus"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewRosebank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rosebank1"
            android:src="@drawable/rosebank_image"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/rivonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/rivonia_campus"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewRivonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/rivonia_image"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/bryanston"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/bryanston_campus"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewBryanston"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bryanston_image"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
